[gd_scene load_steps=9 format=3 uid="uid://ckjwenucikdus"]

[ext_resource type="Texture2D" uid="uid://bvduv0j3kdwtj" path="res://assets/css/question.png" id="1_p66qi"]
[ext_resource type="Script" uid="uid://sfd02iv24sre" path="res://scripts/ui/lobby/save_select_button.gd" id="1_py3m0"]
[ext_resource type="Theme" uid="uid://d2oqlxohwao3c" path="res://assets/styles/battle_settings_menu.tres" id="2_py3m0"]
[ext_resource type="AudioStream" uid="uid://cb75c45y5yhvk" path="res://sound/fx/click.wav" id="4_62xta"]

[sub_resource type="Animation" id="Animation_8827p"]
resource_name = "hover"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 80), Vector2(420, 80)]
}

[sub_resource type="Animation" id="Animation_sayp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 80)]
}

[sub_resource type="Animation" id="Animation_h4wc0"]
resource_name = "select"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(400, 80), Vector2(470, 80), Vector2(460, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4wc0"]
_data = {
&"RESET": SubResource("Animation_sayp3"),
&"hover": SubResource("Animation_8827p"),
&"select": SubResource("Animation_h4wc0")
}

[node name="SaveSelectButtonRight" type="Button"]
texture_filter = 1
custom_minimum_size = Vector2(400, 80)
offset_right = 400.0
offset_bottom = 80.0
toggle_mode = true
script = ExtResource("1_py3m0")

[node name="InnerControl" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CharacterDisplay" type="Panel" parent="InnerControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="CharacterRect" type="TextureRect" parent="InnerControl/CharacterDisplay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p66qi")
stretch_mode = 2

[node name="LabelControl" type="Panel" parent="InnerControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -72.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SaveName" type="Label" parent="InnerControl/LabelControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_right = -8.0
offset_bottom = 30.0
grow_horizontal = 0
mouse_filter = 1
theme = ExtResource("2_py3m0")
text = "Save 1"
horizontal_alignment = 2

[node name="PlayerName" type="Label" parent="InnerControl/LabelControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -30.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("2_py3m0")
text = "Empty"
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_62xta")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h4wc0")
}

[connection signal="focus_entered" from="." to="." method="_on_hover_entered"]
[connection signal="focus_exited" from="." to="." method="_on_hover_exit"]
[connection signal="mouse_entered" from="." to="." method="_on_hover_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_hover_exit"]
